	"#HASHTAG" for `goto-spec' of a hashtag instead of a search
	timeline spec as an internal representation.
	(twittering-make-hashtag-timeline-spec-string-direct): new macro.
	(twittering-make-fontified-tweet-text): embed a timeline spec
	string such as "#HASHTAG" for `goto-spec' of a hashtag instead of
	a search timeline spec as an internal representation.

2011-04-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* NEWS, NEWS.ja, LAST-VERSION, VERSION, doc/web/index.text:
	Version 2.0.0 released.

	* twittering-mode.el: Fix coding system for some operations so
	that they work well even if the default coding system is
	`utf-16le-dos'. Thanks to Moto_Dong who reported the problem.
	(twittering-ensure-ca-cert): explicitly specify coding-system.
	(twittering-start-http-session-curl-https-p): likewise.
	(twittering-read-from-encrypted-file): likewise.
	(twittering-write-and-encrypt): likewise.
	(twittering-load-icon-properties): likewise.
	(twittering-initialize-global-variables-if-necessary): likewise.
	(twittering-status-not-blank-p): likewise.

	* test/test-twittering-mode.el: add a test for a timeline spec
	string like "#hashtag".

	* twittering-mode.el: Store the formatter function before
	compilation.
	(twittering-format-status-function-without-compile): new
	variable.
	(twittering-update-status-format): store the formatter function as
	a lambda expression before being compiled.

	* twittering-mode.el: Embed expressions for fontification in the
	formatter function instead of calling them as a function.
	(twittering-make-fontified-tweet-text): return an expression that
	fontifies a given string. The regular expressions of strings being
	fontified are concatenated on generating a formatter function.
	(twittering-generate-format-table): embed the expression
	fontifying a string in the formatter function. The expression will
	be byte-compiled by `twittering-update-status-format'.

	* twittering-mode.el: Redefine some functions as inline in order